--- a/static/css/style_index.css
+++ b/static/css/style_index.css
@@ -87,6 +87,14 @@
     display: block; 
 }
 
+/* .overlay > button{
+    position: absolute;
+    top: 8%;
+    right: 5%;
+    z-index: 999;
+} */
+
+
 #img-input-wrapper {
     background-color: white;
     z-index: 999;
@@ -94,22 +102,48 @@
     left: 30%;
     top: 30%;
     width: 40%;
-    height: 40%;
+    height: 30%;
     border-radius: 30px;
     box-shadow: 2px 4px 12px rgba(0 0 0/0.08);
     text-align: center;
 }
 
-#img-input-wrapper #img-input{
+#img-input-wrapper-group{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* #img-input-wrapper #img-input{
     position: absolute;
     bottom: 5%;
     left: 10%;
     width: 90%;
     height: 10%;
     padding: 0;
-}
+} */
 
-#img-input-wrapper > div:first-child{
+#img-input-wrapper-group > div:first-child{
     font-family: "DM Serif Display", Silkscreen, "Special Elite", "SF Pro Display", "SF Pro Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 600;
+    font-size: 1.5em;
+    margin-bottom: 10%;
+}
+
+#img-input-group{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#img-input-group > button{
+    margin-left: 3%;
+}
+
+#img-input-wrapper > button{
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
