--- a/templates/generate.html
+++ b/templates/generate.html
@@ -18,6 +18,17 @@
         </div>
     </nav>
     <main>
+        {% if not flag %}
+                    <div class="alert-wrapper">
+                    <div role="alert" class="alert alert-error">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none"
+                            viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                        <span>Error! Server too busy. Please try another model.</span>
+                    </div>
+                    </div>
+                    {% endif %}
         <grid>
             <form action="/generate" method="POST" id="img_generate_form">
                 <div id="both_text_wrapper">
@@ -73,16 +84,8 @@
                 <div class="label">
                     <span class="label-text">Generated image</span>
                 </div>
-                <div id="img_wrapper">
-                    {% if not flag %}
-                    <div role="alert" class="alert alert-error">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none"
-                            viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-                        <span>Error! Server too busy. Please try another model.</span>
-                    </div>
-                    {% endif %}
+                <div class="img_wrapper">
+                    
                     {% if img_stream %}
                     <img src="data:;base64,{{img_stream}}" alt="Generated Image" />
                     {% endif %}
