--- a/templates/current_picture.html
+++ b/templates/current_picture.html
@@ -45,12 +45,11 @@
                 </figure>
                 <div class="card-body">
                     <h2 class="card-title">
-                        What to do with the img2text result?
+                        What to do with the  <span class="italic-yellow-underline">img2text</span> result?
                     </h2>
                     <div>
                         <p class="text-5xl font-semibold text-blue-500">“</p>
                         <p
-                            class="mt-6 text-lg font-medium text-blue-500"
                             id="img2text-wrapper"
                         >
                             {{currentValue}}
