--- a/static/css/style_generate.css
+++ b/static/css/style_generate.css
@@ -63,9 +63,11 @@
     height: 100%;
     background-color: white;
     /* box-shadow: 2px 4px 12px rgba(0 0 0/0.08); */
-    padding: 25px 25px 25px 25px;
+    padding: 10px 25px 25px 25px;
     border-radius: 15px 15px 15px 15px;
     overflow: scroll;
+    text-decoration: underline;
+    text-decoration-color: yellow;
 }
 
 #generated_text_wrapper::-webkit-scrollbar{
