--- a/static/css/style_generate.css
+++ b/static/css/style_generate.css
@@ -204,7 +204,7 @@ grid {
     flex-direction: column;
     height: 100%;
     width: 100%;
-    margin-left: 5px;
+    /* margin-left: 5px; */
 }
 
 .label-number-group.steps{
