--- a/templates/generate.html
+++ b/templates/generate.html
@@ -107,7 +107,7 @@
                     <input type="hidden" name="flag" value="{{ flag }}">
                     <div class="label-instruct-group">
                         <span class="label-text"> Edit instruction</span>
-                        <input type="text" placeholder="Type here"  name="inputprompt" id="pix2pix_textarea"/>
+                        <input type="text" placeholder="Add a bird in the middle"  name="inputprompt" id="pix2pix_textarea"/>
                     </div>
                     <div class="label-number-group steps">
                         <span class="label-text">Steps</span>
