--- a/templates/generate.html
+++ b/templates/generate.html
@@ -111,6 +111,7 @@
                 <form action="/pix2pix" method="POST" id="pix2pix_form">
                     <input type="hidden" name="query" value="{{ query }}">
                     <input type="hidden" name="model" value="{{ model }}">
+                    <input type="hidden" name="file_name" value="{{ file_name }}">
                     <input type="hidden" name="generated_text" value="{{ generated_text }}">
                     <input type="hidden" name="img_stream" value="{{ img_stream }}">
                     <input type="hidden" name="flag" value="{{ flag }}">
