--- a/static/css/style_generate.css
+++ b/static/css/style_generate.css
@@ -171,7 +171,7 @@ grid {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr 1fr 1fr;
     align-items: center;
-    grid-row-gap: 15px;
+    /* grid-row-gap: 25px; */
 }
 
 #pix2pix-wrapper form{
