fix generate bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div id="search-bar">
-                    <form action="/search" method="POST" id="myForm">
+                    <form action="/search" method="POST" id="indexForm">
                         <div id="input-wrapper-filter">
                             <div id="input-wrapper">
                                 <img
