--- a/templates/index.html
+++ b/templates/index.html
@@ -103,6 +103,7 @@
                                     action="/submit_a_picture"
                                     method="post"
                                     enctype="multipart/form-data"
+                                    name="imgForm"
                                 >
 
                                 <div>
