--- a/static/css/style_generate.css
+++ b/static/css/style_generate.css
@@ -4,7 +4,7 @@
     /* height: 30vh; */
     height: 100%;
     grid-column: 1 / -1;
-    grid-row: 1 / span 1;
+    grid-row: 2 / span 1;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -95,7 +95,7 @@
 
 .img_label_wrapper{
     grid-column: 3 / span 1;
-    grid-row: 1 / span 1;
+    grid-row: 2 / span 1;
     width: 100%;
     height: 90%;
 }
@@ -120,10 +120,11 @@
 }
 
 grid {
-    margin-top: 10%;
+    margin-top: 5vh;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 30vh 10vh 30vh 10vh;
+    grid-template-rows: 10vh 30vh 10vh 30vh;
+    margin-left: 10%;
 }
 
 .alert-wrapper {
@@ -155,7 +156,7 @@ grid {
 
 #pix2pix-label-wrapper{
     grid-column: 1 / span 2;
-    grid-row: 3 / span 1;
+    grid-row: 4 / span 1;
     width: 95%;
 }
 
@@ -264,10 +265,46 @@ grid {
 
 #modified-img-g-wrapper{
     grid-column: 3 / span 1;
-    grid-row: 3 / span 1;
+    grid-row: 4 / span 1;
 }
 
 
 #pix2pix_form input:focus{
     outline: none;
+}
+
+.func-title-wrapper{
+    /* align-self: center; */
+    /* text-align: center; */
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    margin-bottom: 2vh;
+}
+
+.func-title-wrapper h2{
+    /* margin-top: 20px; */
+    font-size: 2em;
+    font-family: "DM Serif Display", Silkscreen, "Special Elite", "SF Pro Display", "SF Pro Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.func-title-wrapper h3{
+    /* margin-top: 10px; */
+    margin-bottom: 5px;
+    margin-left: 20px;
+    font-size: 1.1em;
+    font-style: italic;
+}
+
+.func-title-wrapper:first-of-type{
+    grid-column: 1 / -1;
+    grid-row: 1 / span 1;
+    width: 100%;
+}
+
+
+.func-title-wrapper:nth-of-type(2){
+    grid-column: 1 / -1;
+    grid-row: 3 / span 1;
+    width: 100%;
 }
