--- a/templates/index.html
+++ b/templates/index.html
@@ -60,13 +60,13 @@
 
                             <button
                                 class="btn btn-neutral"
-                                onclick="submit_index_form('/search')"
+                                onclick="submit_index_form(this, '/search')"
                             >
                                 Search
                             </button>
                             <button
                                 class="btn btn-outline"
-                                onclick="submit_index_form('/generate')"
+                                onclick="submit_index_form(this, '/generate')"
                             >
                                 <img
                                     src="static/src/feather-solid.svg"
