--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             <div id="search-header">
                 <div id="introduce-header">
                     <h1>Explore the world's best AIGC prompts.</h1>
-                    <p>Prefer. Search again. No end.</p>
+                    <p>A Hub for AIGC Prompts. Let's Search and Generate.</p>
                 </div>
 
                 <div id="search-bar">
