--- a/templates/base_head.html
+++ b/templates/base_head.html
@@ -35,7 +35,7 @@
         />
 
         <!--- Seo Part-->
-        <link rel="canonical" href="magic-prompt.net" />
+        <link rel="canonical" href="https://magic-prompt.net" />
         <meta name="robots" content="index,follow" />
         <meta name="googlebot" content="index,follow" />
         <meta name="revisit-after" content="1 days" />
@@ -45,7 +45,7 @@
             property="og:title"
             content="Magic Prompt - Explore the Best AI Image Generating Prompts"
         />
-        <meta property="og:url" content="magic-prompt.net" />
+        <meta property="og:url" content="https://magic-prompt.net" />
         <meta
             property="og:site_name"
             content="Magic Prompt - Explore the Best AI Image Generating Prompts"
@@ -55,9 +55,7 @@
         <meta name="twitter:card" content="summary" />
         <meta
             name="description"
-            content="Explore diverse AI image prompts on
-        our site. Search by style and preferences for personalized inspiration.
-        Find similar prompts to further tailor your creative journey! 在我们的网站上，您可以探索多样的AI图像生成提示。支持按风格搜索，根据喜好查找类似提示，为您的创意之旅定制个性化的灵感。"
+            content="The world of AIGC unfolds magically here! We are dedicated to helping AIGC enthusiasts discover top-notch prompts that spark creativity. Explore our website's features: Search, Image to Text, and Generate, unleashing endless possibilities for your creativity! Explore boundless creativity, fueling your journey with AIGC. Join our creative community and let your imagination soar! 欢迎来到我们的网站，这里是AIGC的奇妙世界！我们致力于帮助AIGC爱好者们发现引发创意火花的顶级prompt。快来探索我们网站的各种功能：搜索、图像转文本和生成，让您的创意无限延展！探索无限创意，驱动AIGC之旅。加入我们的创意社区，让您的想象力飞翔！"
         />
         <!-- baidu -->
         <meta name="baidu-site-verification" content="codeva-2ptCyPDL5z" />
@@ -84,6 +82,15 @@
                 }
             }
         </script>
+
+        <script type="application/ld+json">
+            {
+              "@context" : "https://schema.org",
+              "@type" : "WebSite",
+              "name" : "Magic Prompt - Explore the Best AI Image Generating Prompts",
+              "url" : "https://magic-prompt.net/"
+            }
+          </script>
 
         <link
             href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css"
