--- a/templates/current_picture.html
+++ b/templates/current_picture.html
@@ -30,6 +30,13 @@
                 <a href="/" class="page_this">Home</a>
                 <a href="/search">Search</a>
                 <a href="/generate">Generate</a>
+                <a href="https://github.com/GOK-656/MagicPrompt">
+                    <img
+                        src="static/src/github.svg"
+                        alt="search icon"
+                        width="20"
+                        height="20"
+                 /></a>
             </div>
         </nav>
         <main>
