--- a/templates/generate.html
+++ b/templates/generate.html
@@ -15,6 +15,13 @@
             <a href="/">Home</a>
             <a href="/search">Search</a>
             <a href="/generate" class="page_this">Generate</a>
+            <a href="https://github.com/GOK-656/MagicPrompt">
+                <img
+                    src="static/src/github.svg"
+                    alt="search icon"
+                    width="20"
+                    height="20"
+             /></a>
         </div>
     </nav>
     <main>
