--- a/templates/search.html
+++ b/templates/search.html
@@ -19,6 +19,13 @@
                 <a href="/" >Home</a>
                 <a href="/search" class="page_this">Search</a>
                 <a href="/generate">Generate</a>
+                <a href="https://github.com/GOK-656/MagicPrompt">
+                    <img
+                        src="static/src/github.svg"
+                        alt="search icon"
+                        width="20"
+                        height="20"
+                 /></a>
             </div>
         </nav>
 
